# gb

./: .gitmodules  CMakeLists.txt  imgui.ini  main.bak.c  main.c
common/: bits.c  bits.h  common.h  error.c  error.h
driver/: event.h
driver/gl/: impl.h  pixel.h  shader.c  shader.h
driver/imgui/: memory_view.h
driver/sdl/: driver.c  driver.h  window.c  window.h
emu/: bits.c  bits.h  cpu.h  mem.c  mem.h
tools/: build  env  fmt  run
